# hdtv

./: .buildinfo  .gitignore  Dockerfile  README.md  genindex.html  objects.inv  pyproject.toml  searchindex.js  zensical.toml
.doctrees/: environment.pickle
.doctrees/autoapi/hdtv/cut/: index.doctree
.doctrees/autoapi/hdtv/database/PGAALibraries/: index.doctree
.doctrees/autoapi/hdtv/database/common/: index.doctree
.doctrees/autoapi/hdtv/drawable/: index.doctree
.doctrees/autoapi/hdtv/efficiency/: index.doctree
.doctrees/autoapi/hdtv/efficiency/efficiency/: index.doctree
.doctrees/autoapi/hdtv/efficiency/polyeff/: index.doctree
.doctrees/autoapi/hdtv/fit/: index.doctree
.doctrees/autoapi/hdtv/histogram/: index.doctree
.doctrees/autoapi/hdtv/marker/: index.doctree
.doctrees/autoapi/hdtv/matrix/: index.doctree
.doctrees/autoapi/hdtv/spectrum/: index.doctree
.doctrees/autoapi/hdtv/util/: index.doctree
.github/workflows/: codeql-analysis.yml
_sources/autoapi/hdtv/cut/: index.rst.txt
_sources/autoapi/hdtv/database/PGAALibraries/: index.rst.txt
_sources/autoapi/hdtv/database/common/: index.rst.txt
_sources/autoapi/hdtv/drawable/: index.rst.txt
_sources/autoapi/hdtv/efficiency/: index.rst.txt
_sources/autoapi/hdtv/efficiency/efficiency/: index.rst.txt
_sources/autoapi/hdtv/efficiency/polyeff/: index.rst.txt
_sources/autoapi/hdtv/fit/: index.rst.txt
_sources/autoapi/hdtv/histogram/: index.rst.txt
_sources/autoapi/hdtv/marker/: index.rst.txt
_sources/autoapi/hdtv/matrix/: index.rst.txt
_sources/autoapi/hdtv/spectrum/: index.rst.txt
_sources/autoapi/hdtv/util/: index.rst.txt
autoapi/hdtv/cut/: index.html
autoapi/hdtv/database/PGAALibraries/: index.html
autoapi/hdtv/database/common/: index.html
autoapi/hdtv/drawable/: index.html
autoapi/hdtv/efficiency/: index.html
autoapi/hdtv/efficiency/efficiency/: index.html
autoapi/hdtv/efficiency/polyeff/: index.html
autoapi/hdtv/fit/: index.html
autoapi/hdtv/histogram/: index.html
autoapi/hdtv/marker/: index.html
autoapi/hdtv/matrix/: index.html
autoapi/hdtv/spectrum/: index.html
autoapi/hdtv/util/: index.html
docs/: hdtv.md  index.md  tutorial.md
docs/api/: libmfile.md  python.md
docs/overrides/: main.html
hdtv/: cmdline.py
hdtv/plugins/: textInterface.py
hdtv/rootext/: CMakeLists.txt  __init__.py
hdtv/rootext/calibration/: CMakeLists.txt  Calibration.hh
hdtv/rootext/display/: CMakeLists.txt  View.hh  View2D.cc
hdtv/rootext/fit/: CMakeLists.txt
hdtv/rootext/mfile-root/: CMakeLists.txt
src/hdtv/: histogram.py  marker.py
src/hdtv/rootext/: __init__.py  calibration.py  mfile.py
src/hdtv/rootext/calibration/: CMakeLists.txt  Calibration.hpp
src/hdtv/rootext/mfile-root/: CMakeLists.txt  MFileHist.hpp  MatOp.cc  MatOp.hpp  VMatrix.hpp
src/hdtv/rootext/mfile-root/mfile/src/: gf2_minfo.c  oldmat_minfo.c
tests/rootext/: complex.mtx  complex.tmtx  create_mtx.c  simple.mtx  simple.tmtx  test_matop.py
